--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -3647,7 +3647,7 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place/Client Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="upk-39-zIv">
                                                 <rect key="frame" x="14" y="39" width="324" height="35"/>
-                                                <color key="backgroundColor" red="0.1215686275" green="0.3921568627" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="L08-AV-VI4"/>
                                                 </constraints>
@@ -3688,7 +3688,7 @@
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visit Purpose" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GMf-CW-pVP">
                                                 <rect key="frame" x="14" y="155" width="324" height="35"/>
-                                                <color key="backgroundColor" red="0.1215686275" green="0.3921568627" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="KUT-NW-Q3y"/>
                                                 </constraints>
@@ -3696,8 +3696,9 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-CM-KpB">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-CM-KpB">
                                                 <rect key="frame" x="14" y="203" width="324" height="40"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="wl0-Fn-2s6"/>
                                                 </constraints>
@@ -3706,7 +3707,7 @@
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kke-74-XX8">
                                                 <rect key="frame" x="14" y="256" width="324" height="35"/>
-                                                <color key="backgroundColor" red="0.1215686275" green="0.3921568627" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="kfX-fp-bsk"/>
                                                 </constraints>
@@ -3761,10 +3762,10 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GY1-1e-Xnx">
-                                        <rect key="frame" x="204" y="582" width="120" height="40"/>
-                                        <color key="backgroundColor" red="0.1215686275" green="0.3921568627" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <rect key="frame" x="190" y="582" width="135" height="40"/>
+                                        <color key="backgroundColor" red="0.9108545184135437" green="0.70984095335006714" blue="0.34733980894088745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="AwG-yu-Cuy"/>
+                                            <constraint firstAttribute="width" constant="135" id="AwG-yu-Cuy"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Submit">
@@ -3772,7 +3773,7 @@
                                         </state>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="8ya-AR-Mzo" firstAttribute="top" secondItem="cdP-2e-TnE" secondAttribute="bottom" constant="20" id="2sn-HQ-hZO"/>
                                     <constraint firstAttribute="bottom" secondItem="8ya-AR-Mzo" secondAttribute="bottom" constant="15" id="4ag-QW-c35"/>
@@ -3783,7 +3784,7 @@
                                     <constraint firstItem="Wn5-cM-aYT" firstAttribute="top" secondItem="IKi-KG-WXg" secondAttribute="top" constant="8" id="Eeb-7K-HaO"/>
                                     <constraint firstAttribute="bottom" secondItem="GY1-1e-Xnx" secondAttribute="bottom" constant="15" id="F8D-Rq-K7n"/>
                                     <constraint firstItem="GY1-1e-Xnx" firstAttribute="top" secondItem="cdP-2e-TnE" secondAttribute="bottom" constant="20" id="O5F-tZ-cHg"/>
-                                    <constraint firstAttribute="trailing" secondItem="GY1-1e-Xnx" secondAttribute="trailing" constant="28" id="QpP-96-HkV"/>
+                                    <constraint firstAttribute="trailing" secondItem="GY1-1e-Xnx" secondAttribute="trailing" constant="27" id="QpP-96-HkV"/>
                                     <constraint firstItem="Wn5-cM-aYT" firstAttribute="leading" secondItem="IKi-KG-WXg" secondAttribute="leading" id="e4j-4w-LGg"/>
                                     <constraint firstAttribute="trailing" secondItem="cdP-2e-TnE" secondAttribute="trailing" id="f7C-sv-CSR"/>
                                     <constraint firstItem="8ya-AR-Mzo" firstAttribute="leading" secondItem="IKi-KG-WXg" secondAttribute="leading" constant="28" id="i6f-yW-Vpk"/>
@@ -3809,7 +3810,11 @@
                         <viewLayoutGuide key="safeArea" id="HzQ-89-aCB"/>
                     </view>
                     <connections>
+                        <outlet property="Adresstxtview" destination="9Ef-7V-Dcv" id="4ne-hU-g26"/>
+                        <outlet property="Cancelbtn" destination="8ya-AR-Mzo" id="x7g-aa-wp7"/>
+                        <outlet property="FieldvisitBckview" destination="IKi-KG-WXg" id="A7d-fM-72o"/>
                         <outlet property="Fieldvisitoutbtn" destination="VMs-aT-W6I" id="6BU-H3-0RP"/>
+                        <outlet property="Submitbrn" destination="GY1-1e-Xnx" id="3az-vp-YNR"/>
                         <outlet property="mapView" destination="8lq-0n-iyX" id="pLb-W2-0aO"/>
                     </connections>
                 </viewController>
