--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -3760,6 +3760,9 @@
                                         <state key="normal" title="Cancel">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="Cancelbtnclk:" destination="iPY-GP-swF" eventType="touchUpInside" id="nZf-Oe-kdO"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GY1-1e-Xnx">
                                         <rect key="frame" x="190" y="582" width="135" height="40"/>
@@ -3815,6 +3818,7 @@
                         <outlet property="FieldvisitBckview" destination="IKi-KG-WXg" id="A7d-fM-72o"/>
                         <outlet property="Fieldvisitoutbtn" destination="VMs-aT-W6I" id="6BU-H3-0RP"/>
                         <outlet property="Submitbrn" destination="GY1-1e-Xnx" id="3az-vp-YNR"/>
+                        <outlet property="VisitPuposetxtfld" destination="Yig-CM-KpB" id="l9f-z8-Hci"/>
                         <outlet property="mapView" destination="8lq-0n-iyX" id="pLb-W2-0aO"/>
                     </connections>
                 </viewController>
