--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -3726,19 +3726,38 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R3X-qp-agR">
-                                                <rect key="frame" x="14" y="131" width="324" height="243"/>
+                                                <rect key="frame" x="14" y="131" width="324" height="203"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Places" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHK-0o-aVS">
-                                                        <rect key="frame" x="44" y="23" width="100" height="30"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Places" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHK-0o-aVS">
+                                                        <rect key="frame" x="22" y="18" width="100" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="fSO-FM-sky"/>
+                                                            <constraint firstAttribute="width" constant="100" id="q7n-K0-8n2"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0la-SC-OKF">
+                                                        <rect key="frame" x="0.0" y="61" width="324" height="134"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="134" id="xJj-EN-Ex1"/>
+                                                        </constraints>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="iPY-GP-swF" id="6hF-nw-ud0"/>
+                                                            <outlet property="delegate" destination="iPY-GP-swF" id="KYb-Ta-I5E"/>
+                                                        </connections>
+                                                    </tableView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="243" id="dVG-aS-SWr"/>
+                                                    <constraint firstItem="QHK-0o-aVS" firstAttribute="top" secondItem="R3X-qp-agR" secondAttribute="top" constant="18" id="1lT-a0-6UQ"/>
+                                                    <constraint firstItem="0la-SC-OKF" firstAttribute="leading" secondItem="R3X-qp-agR" secondAttribute="leading" id="Gym-Bs-zxL"/>
+                                                    <constraint firstAttribute="trailing" secondItem="0la-SC-OKF" secondAttribute="trailing" id="Iu4-Xw-dJc"/>
+                                                    <constraint firstItem="QHK-0o-aVS" firstAttribute="leading" secondItem="R3X-qp-agR" secondAttribute="leading" constant="22" id="c7V-3X-5bQ"/>
+                                                    <constraint firstAttribute="height" constant="203" id="dVG-aS-SWr"/>
+                                                    <constraint firstItem="0la-SC-OKF" firstAttribute="top" secondItem="QHK-0o-aVS" secondAttribute="bottom" constant="13" id="lby-eM-JG6"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -3837,6 +3856,7 @@
                         <outlet property="DrpDownview" destination="R3X-qp-agR" id="WXk-wf-wuZ"/>
                         <outlet property="FieldvisitBckview" destination="IKi-KG-WXg" id="A7d-fM-72o"/>
                         <outlet property="Fieldvisitoutbtn" destination="VMs-aT-W6I" id="6BU-H3-0RP"/>
+                        <outlet property="SelectPlaceDrptble" destination="0la-SC-OKF" id="eY3-if-eyr"/>
                         <outlet property="Selectplacelbl" destination="NoD-2f-GUq" id="SFG-Yy-d0D"/>
                         <outlet property="Submitbrn" destination="GY1-1e-Xnx" id="3az-vp-YNR"/>
                         <outlet property="VisitPuposetxtfld" destination="Yig-CM-KpB" id="l9f-z8-Hci"/>
