--- a/FaceTek/Base.lproj/LaunchScreen.storyboard
+++ b/FaceTek/Base.lproj/LaunchScreen.storyboard
@@ -24,7 +24,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="facetek_title1.png" translatesAutoresizingMaskIntoConstraints="NO" id="hyU-av-3fp">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="facetek_titleNew.png" translatesAutoresizingMaskIntoConstraints="NO" id="hyU-av-3fp">
                                 <rect key="frame" x="87" y="261" width="200" height="145"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="facetek_title1.png" width="1042" height="1042"/>
+        <image name="facetek_titleNew.png" width="1042" height="1042"/>
     </resources>
 </document>
