--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -16,22 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable Permission to access the Application" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIS-6o-DDw">
-                                <rect key="frame" x="12" y="396" width="350" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="pgx-RV-vZL"/>
-                                    <constraint firstAttribute="width" constant="350" id="yhi-ji-AaG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PzL-Jt-nrb">
-                                <rect key="frame" x="52" y="470" width="270" height="35"/>
+                                <rect key="frame" x="52" y="485" width="270" height="35"/>
                                 <color key="backgroundColor" red="0.054901960780000002" green="0.29803921570000003" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="E1s-AP-QhJ"/>
-                                    <constraint firstAttribute="width" constant="270" id="vt3-38-5ux"/>
+                                    <constraint firstAttribute="height" constant="35" id="J4Q-Vn-GtY"/>
                                 </constraints>
                                 <state key="normal" title="Allow">
                                     <color key="titleColor" red="0.92181676626205444" green="0.97276026010513306" blue="0.97528868913650513" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -41,23 +30,32 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_location_found.png" translatesAutoresizingMaskIntoConstraints="NO" id="yZP-Hg-ruV">
-                                <rect key="frame" x="67" y="220" width="240" height="128"/>
+                                <rect key="frame" x="67.5" y="220" width="240" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="4ZC-1n-Ieh"/>
-                                    <constraint firstAttribute="width" constant="240" id="Kd3-Uu-oph"/>
+                                    <constraint firstAttribute="height" constant="128" id="n7l-zM-RrJ"/>
+                                    <constraint firstAttribute="width" constant="240" id="qLv-Lv-cLB"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable location access to monitor user location" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIS-6o-DDw">
+                                <rect key="frame" x="43" y="392" width="289" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62" id="JDX-kU-0sw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="PzL-Jt-nrb" firstAttribute="centerX" secondItem="EIS-6o-DDw" secondAttribute="centerX" id="G3C-qa-Z4c"/>
-                            <constraint firstItem="W9e-q6-tpN" firstAttribute="trailing" secondItem="EIS-6o-DDw" secondAttribute="trailing" constant="13" id="cND-co-swt"/>
-                            <constraint firstItem="EIS-6o-DDw" firstAttribute="top" secondItem="yZP-Hg-ruV" secondAttribute="bottom" constant="48" id="hvE-Fj-eLg"/>
-                            <constraint firstItem="PzL-Jt-nrb" firstAttribute="top" secondItem="EIS-6o-DDw" secondAttribute="bottom" constant="49" id="kU8-6A-K1p"/>
-                            <constraint firstItem="yZP-Hg-ruV" firstAttribute="top" secondItem="W9e-q6-tpN" secondAttribute="top" constant="220" id="kVa-5l-YW0"/>
-                            <constraint firstItem="W9e-q6-tpN" firstAttribute="trailing" secondItem="yZP-Hg-ruV" secondAttribute="trailing" constant="68" id="owb-wH-GzP"/>
-                            <constraint firstItem="EIS-6o-DDw" firstAttribute="leading" secondItem="W9e-q6-tpN" secondAttribute="leading" constant="12" id="p2n-Sa-NMX"/>
-                            <constraint firstItem="yZP-Hg-ruV" firstAttribute="leading" secondItem="W9e-q6-tpN" secondAttribute="leading" constant="67" id="rWb-h7-Yc3"/>
+                            <constraint firstItem="PzL-Jt-nrb" firstAttribute="top" secondItem="EIS-6o-DDw" secondAttribute="bottom" constant="31" id="9T9-am-Hah"/>
+                            <constraint firstItem="W9e-q6-tpN" firstAttribute="trailing" secondItem="PzL-Jt-nrb" secondAttribute="trailing" constant="53" id="BfB-VJ-Otu"/>
+                            <constraint firstItem="yZP-Hg-ruV" firstAttribute="top" secondItem="W9e-q6-tpN" secondAttribute="top" constant="220" id="L1Y-sF-3Ps"/>
+                            <constraint firstItem="EIS-6o-DDw" firstAttribute="leading" secondItem="W9e-q6-tpN" secondAttribute="leading" constant="43" id="MWp-cR-lI8"/>
+                            <constraint firstItem="yZP-Hg-ruV" firstAttribute="centerX" secondItem="IGh-Rf-d7v" secondAttribute="centerX" id="Qw2-J5-Hay"/>
+                            <constraint firstItem="W9e-q6-tpN" firstAttribute="trailing" secondItem="EIS-6o-DDw" secondAttribute="trailing" constant="43" id="box-Cv-nJB"/>
+                            <constraint firstItem="EIS-6o-DDw" firstAttribute="top" secondItem="yZP-Hg-ruV" secondAttribute="bottom" constant="44" id="e61-HP-DGU"/>
+                            <constraint firstItem="PzL-Jt-nrb" firstAttribute="leading" secondItem="W9e-q6-tpN" secondAttribute="leading" constant="52" id="lVx-Jq-50X"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="W9e-q6-tpN"/>
                     </view>
@@ -67,7 +65,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dJF-u6-HN7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3590" y="-591"/>
+            <point key="canvasLocation" x="3589.5999999999999" y="-591.45427286356824"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
