--- a/FaceTek/Manager/PendingLeavescellTableViewCell.xib
+++ b/FaceTek/Manager/PendingLeavescellTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -182,8 +182,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="AcceptLbl" destination="cp4-Va-jyU" id="S1i-Lb-Ygv"/>
                 <outlet property="FromLbl" destination="zOX-Qr-dj8" id="Hd2-Bp-I8y"/>
                 <outlet property="LeaveTypeLbl" destination="4xC-7o-NNA" id="h4U-pU-xCE"/>
+                <outlet property="RejctLbl" destination="9uu-7k-aCr" id="uim-S5-RXi"/>
                 <outlet property="RemarksLbl" destination="FuM-MB-UrJ" id="oEm-zC-Riz"/>
                 <outlet property="ToLbl" destination="O07-ZL-5zo" id="8gr-T6-jzF"/>
             </connections>
